--- a/base-p5-project-main/base-p5-project-main/css/style.css
+++ b/base-p5-project-main/base-p5-project-main/css/style.css
@@ -1,9 +1,13 @@
 html,
 body {
-  margin: 0;
+  margin:0;
   padding: 0;
   background-color: black;
 }
 canvas {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+
 }
